<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#ffffff"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:src="@drawable/rf"/>

        <TextView
            android:id="@+id/version_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="17dp"
            android:text="@string/my_version_info"
            android:textColor="#222222"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="#fff"
            android:orientation="vertical">

            <TextView
                android:id="@+id/use_help"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#F5F5F5"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/my_use_help"
                android:textColor="#6C6A6B"
                android:textSize="14sp"/>
            <!--#E6E6E6-->

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#e6e6e6"/>

            <TextView
                android:id="@+id/contact_us"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"
                android:background="#F5F5F5"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/my_contact_us"
                android:textColor="#6C6A6B"
                android:textSize="14sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#e6e6e6"/>

            <TextView
                android:id="@+id/feedback"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#F5F5F5"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/my_feedback"
                android:textColor="#6C6A6B"
                android:textSize="14sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#e6e6e6"/>

            <TextView
                android:id="@+id/update"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:background="#F5F5F5"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/my_update"
                android:textColor="#6C6A6B"
                android:textSize="14sp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/my_use_and_privacy"
            android:textColor="#405FAF"
            android:textSize="13sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/login_copyright"
            android:textColor="#6D6B6C"
            android:textSize="14sp"/>
    </LinearLayout>

</LinearLayout>
